<resources>
    <!--<string name="app_name">CTF</string>-->

    <!-- Strings for page titles -->
    <string name="dashboard">Dashboard</string>
    <string name="roominfo">Room Info</string>
    <string name="user_print_jobs">Print Jobs</string>
    <string name="ticket">Submit Ticket</string>
    <string name="settings">Settings</string>
    <string name="reportproblem">Report a problem</string>
    <string name="loading">Loading</string>

    <!-- Strings for blind people? -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="printer_error">Printing Unavailable</string>
    <string name="printer_working">Printing Available</string>
    <string name="computers_available">Computers Available</string>
    <string name="computers_unavailable">No Computers Available</string>
    <string name="map_button">View Room Map</string>

    <string name="action_search">Search</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_settings">Settings</string>

    <!-- Srings related to settings -->
    <string name="pref_push_title">Push notifications</string>
    <string name="pref_pushprinterdownup">Printer goes down/comes back up</string>
    <string name="pref_roomnotfull">A previously full room frees up</string>
    <string name="pref_jobenters">A job of yours enters the print queue</string>
    <string name="pref_remainquota">Quota is equal or less than:</string>
    <string name="pref_other_title">Other</string>
    <string name="pref_language">Language</string>
    <string name="pref_about">About</string>
    <string name="pref_logout">Logout</string>

    <!-- Strings related to problem report page -->
    <string name="error_inst">Pick which room is causing you grievances, select the error, and press send to relay onto us your grievances.</string>
    <string name="error_report_title">Error Report</string>
    <string-array name="problem_spinner">
        <item>Printer Down</item>
        <item>Computer Down</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">McGill Email / Short User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This is not a valid McGill email address</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings displayed on the dashboard -->
    <string name="dashboard_username_text">User: %s</string>
    <string name="dashboard_quota_text">Quota: %s</string>
    <string name="dashboard_last_job_text">Last job: %s</string>
    <string name="string_1b16">1B16</string>
    <string name="string_1b17">1B17</string>
    <string name="string_1b18">1B18</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="table_header_print_history">Print History</string>

    <string name="update">Update</string>

    <string name="send_error">Send Error</string>
    <string name="ctf_long_name">McGill Science Computer Taskforce</string>
    <string name="error_load_fail">Contents failed to load…</string>


    <!--Verbatim-->
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="close">Close</string>
    <string name="enter_reason">Enter reason here</string>
    <string name="no_suggestions">No suggestions found.</string>
    <string name="search_users">Search short usernames…</string>
    <string name="ticket_problem_desc">Type the problem or use one of the presets; state just the problem as your header and footer will be added automatically.\nPress the send button when you\'re done to prefill the form. Verify that everything is correct before sending it.</string>
    <string name="use_preset">Use Preset</string>
    <string name="type_here">Type here</string>
    <string name="bracket_none">[none]</string>
    <string name="computer_availability">Computer Availability</string>
    <string name="unrefund">Unrefund</string>
    <string name="unrefunded">Unrefunded</string>
    <string name="refund">Refund</string>
    <string name="refunded">Refunded</string>
    <string name="no_self_refund">You cannot refund yourself.</string>
    <!--Format-->
    <string name="refund_success_format">%1$s successfully %2$s</string>
    <string name="refund_fail_format">%1$s failed to %2$s</string>
    <string name="page_count_format">%1$d pages</string>
    <string name="colour_page_count_format">%1$d coloured pages</string>
    <string name="failed">Failed</string>
    <string name="printed">Printed</string>
    <string name="processed">Processed</string>
    <string name="processing">Processing</string>
    <string name="colour_printing">Colour Printing</string>
    <string name="colour_printing_result">Colour printing successfully %s</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="colour_printing_toggle_fail">Failed to toggle colour printing</string>
    <string name="pages_remaining">%d pages remaining</string>
    <string name="modify">Modify</string>

</resources>


