<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/capsule_activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/capsule_activity_vertical_margin">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_printer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:maxEms="6"
            android:minEms="6"
            android:text="@string/bracket_none" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btn_printer"
            android:text="@string/ticket_problem_desc" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/capsule_activity_vertical_margin">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/use_preset" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btn_ticket"
            android:text="@string/ticket_problem_desc" />

    </RelativeLayout>


    <AutoCompleteTextView
        android:id="@+id/problem_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here"
        android:imeOptions="actionNext"
        android:inputType="textAutoCorrect|textCapSentences|textMultiLine|textLongMessage"
        android:paddingBottom="@dimen/capsule_activity_vertical_margin" />

</LinearLayout>